--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 DevHDF5/Terms.hdf5
+DevHDF5/TermInfo.hdf5
